--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Mahira | VCard | CV HTML Template</title>
+<title>2022212912hesiya</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -75,13 +75,11 @@
                     <div class="author-info" style="background-image:url(images/background/3.jpg)">
                         <div class="image"><img src="images/resource/user.png" alt=""></div>
                         <div class="author">
-                            <h3>Mahira Rashid</h3>
+                            <h3>HesiyaCQUPT</h3>
                             <div class="designation">
                                 Hi i’m
                                 <div class="typing-title">
-                                    <p>a <strong>web developer.</strong></p>
-                                    <p>a <strong>web Designer.</strong></p>
-                                    <p>a <strong>photographer.</strong></p>
+                                    <p>a <strong>student.</strong></p>                                              
                                 </div>
                                 <span class="typed-title"></span>
                             </div>
@@ -89,12 +87,12 @@
                         <div class="link-btn">
                             <a href="http://www.17sucai.com/" class="theme-btn btn-style-one">Download CV</a>
                         </div>
-                        <ul class="social-icon-two">
-                            <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                            <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                            <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                            <li><a href="#"><span class="fa fa-pinterest"></span></a></li>
-                        </ul>
+                     <ul class="social-icon-two">
+                      <li><a href="#">QQ: 888888</a></li>
+                      <li><a href="#">微信: 666666</a></li>
+                      <li><a href="tel:1111111">电话: 1111111</a></li>
+                     </ul>
+
                     </div>
                     <div class="card-inner-box">
                         <header class="header wow fadeInLeft" data-wow-duration="1.5s">
@@ -152,15 +150,15 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <ul class="list-style-one">
-                                                <li><strong>Name:</strong>  Mahira Rashid</li>
-                                                <li><strong>Phone:</strong>  254 - 2563 - 2154</li>
-                                                <li><strong>Address:</strong>  San francisco, USA</li>
+                                                <li><strong>Name:</strong>  Hesiya</li>
+                                                <li><strong>Phone:</strong>  11111111</li>
+                                                <li><strong>Address:</strong>  chongqingyoudiandaxue</li>
                                             </ul>
                                         </div>
                                         <div class="col-md-6">
                                             <ul class="list-style-one">
-                                                <li><strong>Email:</strong>  mahirarashid@gmail.com</li>
-                                                <li><strong>Freelance:</strong>  Available</li>
+                                                <li><strong>Email:</strong>  2206038130@qq.com</li>
+                                                
                                             </ul>
                                         </div>
                                     </div>
