--- a/blog-single.html
+++ b/blog-single.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Mahira | VCard | CV HTML Template</title>
+<title>hesiya | VCard | CV HTML Template</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -73,13 +73,13 @@
             <div class="container" data-animation-in="fadeInLeft" data-animation-out="fadeOutLeft">
                 <div class="card-wrapper">
                     <div class="author-info" style="background-image:url(images/background/3.jpg)">
-                        <div class="image"><img src="images/resource/user.png" alt=""></div>
+                        <div class="image"><img src="images/resource/user.ipg" alt=""></div>
                         <div class="author">
-                            <h3>Mahira Rashid</h3>
+                            <h3>hesiya</h3>
                             <div class="designation">
                                 Hi i’m
                                 <div class="typing-title">
-                                    <p>a <strong>web developer.</strong></p>
+                                    <p>a <strong>shudent.</strong></p>
                                     <p>a <strong>web Designer.</strong></p>
                                     <p>a <strong>photographer.</strong></p>
                                 </div>
@@ -89,12 +89,7 @@
                         <div class="link-btn">
                             <a href="#" class="theme-btn btn-style-one">Download CV</a>
                         </div>
-                        <ul class="social-icon-two">
-                            <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                            <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                            <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                            <li><a href="#"><span class="fa fa-pinterest"></span></a></li>
-                        </ul>
+                        
                     </div>
                     <div class="card-inner-box offsetleft">
                         <header class="header">
