--- a/blog-single.html
+++ b/blog-single.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>hesiya | VCard | CV HTML Template</title>
+<title>hesiya</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -53,8 +53,7 @@
                             
                             <li class="current"><a href="#home">Home</a></li>
                             <li><a href="#about">About</a></li>
-                            <li><a href="#resume">Resume</a></li>
-                            <li><a href="#services">Services</a></li>
+                    
                             <li><a href="#work">Works</a></li>
                             <li><a href="#blog">Blog</a></li>
                             <li><a href="#contact">Contact</a></li>
