--- a/index.html
+++ b/index.html
@@ -294,6 +294,10 @@
                                 </div>
                                 <ul>
                                     <li>
+                                        <p><a href="https://www.zhihu.com">知乎入口</a></p>
+                                        <span>（友情链接）若想观看更多咨询，请点击上方红色文字</span>
+                                    </li>
+                                    <li>
                                         <p><a href="https://www.zhihu.com/question/622975242/answer/3321302845?utm_psn=1781440775583711232">大学的真相</a></p>
                                         <span>2024-05-06 11:55</span>
                                     </li>
