--- a/index.html
+++ b/index.html
@@ -343,7 +343,11 @@
                                         <span>2024-05-12 08:03</span>
                                     </li>
                                 </ul>
-                                
+                                <div class="text">广告</div>
+                                        <div class="lower-content">
+                                            <h4><a href="blog-single.html"></a></h4>
+                                            <div class="text">想要美丽的图片，就来醒图~</div>
+                                        </div>
                                 <div class="footer">
                                     <p class="link">友情链接：<a href="https://www.douyin.com/user/MS4wLjABAAAAl0cS7tVK0WaSwQViM197g4XGQ5uUhY5Rx2Dp0BHTNKBuUGogXDs-NHlIKJjLpDvh" target="_blank">抖音用户界面</a></p>
                                     <p class="info">想获取更多信息，请关注我的抖音</p>
