--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                                 </ul>
                                 <div class="text">广告</div>
                                 <div class="lower-content">
-                                    <h4><a href="blog-single.html"></a></h4>
+                                    <img src="images/resource/blog-4.png" alt="Image 4">
                                     <div class="text">想要美丽的图片，就来醒图~</div>
                                 </div>
                                 <div class="footer">
