--- a/index.html
+++ b/index.html
@@ -344,8 +344,10 @@
                                     </li>
                                 </ul>
                                 <div class="text">广告</div>
+                                <div class="image">
+                                    <img src="images/resource/blog-4.png" alt="">
+                                </div>
                                 <div class="lower-content">
-                                    <img src="images/resource/blog-4.png" alt="Image 4">
                                     <div class="text">想要美丽的图片，就来醒图~</div>
                                 </div>
                                 <div class="footer">
